Fix button padding in px to em to allow sizing. Fix alignment, button borders.

--- a/styles/web/common/base.less
+++ b/styles/web/common/base.less
@@ -150,16 +150,17 @@ input[type="reset"].k-button-expand
     width: 100%;
 }
 
-body .k-button-icon
+body .k-button-icon,
+body .k-split-button-arrow
 {
-    padding-left: 4px;
-    padding-right: 4px;
+    padding-left: .4em;
+    padding-right: .4em;
 }
 .k-ie7 a.k-button-icon { padding-left: 5px; padding-right: 5px;/*+1*/ }
 
 .k-button-icontext
 {
-    padding-right: 8px;
+    padding-right: .8em;
     overflow: visible; /*IE9*/
 }
 
